Fix: Fix z-index sidebar over news, redirection on navbar and slides

--- a/styles.css
+++ b/styles.css
@@ -771,7 +771,7 @@
     flex-direction: column;
     padding: 42px;
     position: absolute;
-    z-index: 4;
+    z-index: 2;
     width: 100%;
     height: 100%;
     top: 0;
